[package]
name = "framework_toolbox"
version = "0.1.0"
edition = "2021"

default-run = "fwtb"

[[bin]]
name = "fwtb"
path = "src/main.rs"

[[bin]]
name = "fwtbd"
path = "src/bin/daemon.rs"

[[bin]]
name = "fwtb-ab"
path = "src/bin/auto_backlight.rs"

[dependencies]
anyhow = "1.0.66"
iced = { git = "https://github.com/iced-rs/iced", rev = "77c8380", features = ["tokio"] }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "77c8380" }
iced_lazy = { git = "https://github.com/iced-rs/iced", rev = "77c8380" }
os_pipe = "1.1.1"
serde = { version = "1.0.145", features = ["derive"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
