[package]
name = "framework_toolbox"
version = "0.6.0"
edition = "2021"

default-run = "fwtb"

[[bin]]
name = "fwtb"
path = "src/main.rs"

[[bin]]
name = "fwtbd"
path = "src/bin/daemon.rs"

# [[bin]]
# name = "fwtb-ab"
# path = "src/bin/auto_backlight.rs"

[dependencies]
anyhow = "1.0.66"
os_pipe = "1.1.1"
serde = { version = "1.0.145", features = ["derive"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
splines = "4.1.1"
dirs = "4.0.0"
iced = {version = "0.5.2", features = ["tokio"]}
iced_native = "0.6.1"
iced_lazy = "0.2.0"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
console-subscriber = "0.1.8"
tracing = "0.1.37"
strum = { version = "0.24.1", features = ["derive"] }
notify = { version = "5.1.0", default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
# brightness = {version = "0.5.0", features = ["blocking"]}
